@@ -7,7 +7,7 @@
         <version>1.0.37-SNAPSHOT</version>
     </parent>
     <artifactId>jobs</artifactId>
-    <name>NLS routing Graphhopper jobs</name>
+    <name>NLS Accessibility Map Graphhopper jobs</name>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -76,43 +76,12 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-    <repositories>
-        <repository>
-            <id>NLS</id>
-            <url>https://pkgs.dev.azure.com/ndwnu/NLS/_packaging/NLS/maven/v1</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>osgeo</id>
-            <name>OSGeo Release Repository</name>
-            <url>https://repo.osgeo.org/repository/release/</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-        </repository>
-    </repositories>
     <build>
         <defaultGoal>clean verify</defaultGoal>
         <plugins>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <useSystemClassLoader>false</useSystemClassLoader>
-                    <argLine>@{argLine} --add-opens java.base/java.util.stream=ALL-UNNAMED</argLine>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
